applications/magicpack/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: magicpack
  annotations:
    secret.reloader.stakater.com/reload: "magicpack-postgres-secret"
spec:
  replicas: 0
  revisionHistoryLimit: 3
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: magicpack
  template:
    metadata:
      labels:
        app: magicpack
    spec:
      hostNetwork: true
      containers:
        - name: magicpack
          image: alexswki/magicpack
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
          volumeMounts:
          - name: magicpack-config
            mountPath: /magicpack/computers.json
            subPath: computers.json
      volumes:
        - name: magicpack-config
          configMap:
            name: magicpack-config
