applications/magicpack/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: magicpack
spec:
  type: ClusterIP
  selector:
    app: magicpack
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3000
